--- a/src/main/client/src/app/components/map-view/map-view.component.html
+++ b/src/main/client/src/app/components/map-view/map-view.component.html
@@ -1,25 +1,31 @@
 
-<div>
-     <h4>{{ 'tenants' | translate}}</h4>
-<mat-form-field>
-  <mat-label>{{ 'tenant' | translate}}</mat-label>
-  <mat-select [(ngModel)]="tenant" (selectionChange)="changeTenant()">
-    @for (t of tenants; track t) {
-      <mat-option [value]="t">{{ t.val | translate}}</mat-option>
-    }
-  </mat-select>
-</mat-form-field>
+<div class="app-fxLayout app-row">
+
+  <div style="flex: 1 1 50%">
+    <h4>{{ 'tenants' | translate}}</h4>
+    <mat-form-field>
+      <mat-label>{{ 'tenant' | translate}}</mat-label>
+      <mat-select [(ngModel)]="tenant" (selectionChange)="changeTenant()">
+        @for (t of tenants; track t) {
+          <mat-option [value]="t">{{ t.val | translate}}</mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
+  </div>
+  
+  <div style="flex: 1 1 50%" class="app-fxFlex app-center-v">
+    <div echarts style="height: 100px; width: 100%;"
+        [options]="chartOptionsRok" 
+        (chartInit)="onChartRokInit($event)" 
+        (chartBrushEnd)="onRokSelected($event)" 
+        (chartBrushSelected)="onClearSelection($event)">
+    </div>
+    <div *ngIf="limits">od: {{ limits[0] }} - do: {{ limits[1] }}</div>
+  </div>
 </div>
 
 <div style="height: 550px;"
      leaflet 
      [leafletOptions]="options"
      (leafletMapReady)="onMapReady($event)">
-</div>
-
-<div echarts style="height: 100px; width: 100%"
-     [options]="chartOptionsRok" 
-     (chartInit)="onChartRokInit($event)" 
-     (chartBrushEnd)="onRokSelected($event)" 
-     (chartBrushSelected)="onClearSelection($event)">
 </div>
