--- a/src/main/client/src/styles.scss
+++ b/src/main/client/src/styles.scss
@@ -18,7 +18,6 @@ html {
       tertiary: my-theme.$tertiary-palette,
       theme-type: light,
     ),
-    typography: Roboto,
-    density: 0,
+    typography: Roboto
   ));
 }
