--- a/src/main/client/src/styles.scss
+++ b/src/main/client/src/styles.scss
@@ -17,7 +17,6 @@ html {
       primary: my-theme.$primary-palette,
       tertiary: my-theme.$tertiary-palette,
       theme-type: light,
-    ),
-    typography: Roboto
+    )
   ));
 }
