--- a/src/main/client/src/app/app.component.html
+++ b/src/main/client/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="app-fxLayout app-column app-fill">
     <app-navbar></app-navbar>
-    <div class="app-fxFlex">
+    <div class="app-fxFlex app-oh">
       <router-outlet></router-outlet> 
     </div>
     <app-footer></app-footer>
