--- a/src/main/client/src/app/components/navbar/navbar.component.html
+++ b/src/main/client/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary" class="app-fxLayout-row">
     <div class="app-fxFlex">
       <a [routerLink]="['/']" class="app-fxFlex app-fxLayout app-row app-center-v">
-        <img src="https://netlet.lib.cas.cz/wp-content/uploads/2023/08/netlet-logo-white.svg" title="Netlet" class="app-logo" /><span class="app-logo-desc">Analysis & Visualization</span>
+        <img src="https://netlet.lib.cas.cz/wp-content/uploads/2023/08/netlet-logo-white.svg" title="Netlet" class="app-logo" />
+        <span class="app-logo-desc">Analysis & Visualization</span>
       </a>
     </div>
     <div class="app-fxLayout app-row app-center-v">
