--- a/src/main/client/src/app/components/map-view/map-view.component.html
+++ b/src/main/client/src/app/components/map-view/map-view.component.html
@@ -16,14 +16,24 @@
       <div echarts style="height: 100px; width: 100%;"
           [options]="chartOptionsRok" 
           (chartInit)="onChartRokInit($event)" 
-          (chartBrushEnd)="onRokSelected($event)" 
+          (chartBrushEnd)="onSetYears($event)" 
           (chartBrushSelected)="onClearSelection($event)">
       </div>
       <div *ngIf="limits">od: {{ limits[0] }} - do: {{ limits[1] }}</div>
     </div>
-    <div  style="height: 300px; width: 100%; overflow-y: scroll;">
-      <mat-list>
+    <div>
+      <h3>{{ 'Recipients' | translate}}</h3>
+      <mat-list  style="max-height: 300px; width: 100%; overflow-y: scroll;">
         <mat-list-item *ngFor="let identity of recipients" 
+          (mouseout)="clearHighlight()" (mouseover)="highlightRecipients(identity)">
+          {{ identity.name}} ({{identity.value}})
+        </mat-list-item>
+      </mat-list>
+    </div>
+    <div>
+      <h3>{{ 'Mentioned' | translate}}</h3>
+      <mat-list style="max-height: 300px; width: 100%; overflow-y: scroll;">
+        <mat-list-item *ngFor="let identity of mentioned" 
           (mouseout)="clearHighlight()" (mouseover)="highlightLinks(identity)">
           {{ identity.name}} ({{identity.value}})
         </mat-list-item>
