--- a/src/main/client/src/scss/_theme-colors.scss
+++ b/src/main/client/src/scss/_theme-colors.scss
@@ -202,3 +202,15 @@ $tertiary-palette: map.merge(map.get($_palettes, tertiary), $_rest);
     on-surface-variant: _high-contrast-value(#000000, #ffffff, $theme-type),
   ))
  }
+
+ html {
+  @include mat.theme((
+    color: (
+      primary: $primary-palette,
+      tertiary:  $tertiary-palette,
+      theme-type: light,
+    ),
+    typography: Roboto,
+    density: 0,
+  ));
+}
