--- a/src/main/client/src/app/pages/home/home.component.html
+++ b/src/main/client/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
     </mat-card-header>
     <mat-card-content>
         <p>
-            Komparativně pojatá mapová zobrazení v rámci tří hlavních období
+            Digitální vizualizace zaměřené na geografický horizont jednotlivých osobních korespondenčních souborů.
         </p>
       </mat-card-content>
     <mat-card-actions align="end" class="app-mat-card-actions">
