--- a/src/main/client/src/scss/_app-mat-override.scss
+++ b/src/main/client/src/scss/_app-mat-override.scss
@@ -5,13 +5,18 @@
   @include mat.toolbar-overrides((
     container-background-color: var(--mat-sys-primary),
       container-text-color: white,
-      title-text-size: 20px
+      title-text-size: 20px,
+      //standard-height: 80px
       ));
 
 
   @include mat.list-overrides((
     list-item-hover-label-text-color: orange,
-    list-item-one-line-container-height: -1.2
+    list-item-one-line-container-height: 24px
+    ));
+
+    @include mat.form-field-overrides((
+      container-height: 48px
     ));
 }
 
